fix: button theming and text wrap

--- a/src/styles/theming/button.sass
+++ b/src/styles/theming/button.sass
@@ -1,26 +1,9 @@
 .cyan--mode--light
-  // Primary colors
-  --cyan-background-button: var(--chroma-primary-c)
-  --cyan-background-button-hover: var(--chroma-primary-d)
-  --cyan-background-button-active: var(--chroma-primary-a)
-  --cyan-background-button-disabled: var(--chroma-secondary-i)
-  // Text buttons
-  --cyan-background-button-text: var(--chroma-secondary-i)
-  --cyan-background-button-text-hover: var(--chroma-secondary-h)
   // Tags
   --cyan-background-tag: var(--chroma-secondary-i)
   // FAB
   --cyan-background-fab: var(--chroma-primary-h)
 .cyan--mode--dark, .chroma-box-a
-  // Primary colors
-  --cyan-background-button: linear-gradient(79deg, var(--chroma-primary-d), var(--chroma-primary-c))
-  --cyan-background-button-hover: linear-gradient(79deg, var(--chroma-primary-f), var(--chroma-primary-d))
-  --cyan-background-button-active: linear-gradient(79deg, var(--chroma-primary-c), var(--chroma-primary-a))
-  --cyan-background-button-disabled: var(--cyan-background-overlay-light)
-  // Text buttons
-  --cyan-button-text-color: var(--chroma-secondary-i)
-  --cyan-background-button-text: var(--cyan-background-overlay-light)
-  --cyan-background-button-text-hover: var(--cyan-background-overlay-dark)
   // Tags
   --cyan-background-tag: var(--chroma-secondary-c)
   // FAB
